--- a/res/xml/level-1.xml
+++ b/res/xml/level-1.xml
@@ -6,6 +6,7 @@
     <y>300</y>
     <width>50</width>
     <height>60</height>
+    <texture>GROUND</texture>
   </object>
   <object id="2">
     <name>two</name>
@@ -13,6 +14,7 @@
     <y>400</y>
     <width>50</width>
     <height>75</height>
+    <texture>GROUND_2</texture>
   </object>
     <object id="3">
     <name>three</name>
@@ -20,5 +22,6 @@
     <y>400</y>
     <width>50</width>
     <height>80</height>
+    <texture>GROUND_3</texture>
   </object>
 </level>
